infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.usa-invest.ru' ) {
        rewrite ^ https://usa-invest.ru$request_uri permanent;
      }
    nginx.ingress.kubernetes.io/ssl-redirect: "True"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "True"
spec:
  tls:
    - hosts:
          - usa-invest.ru
          - www.usa-invest.ru
      secretName: usainvest-tls
  rules:
    - host: usa-invest.ru
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /signin-google?(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /signin-vkontakte?(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /signin-facebook?(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
    - host: www.usa-invest.ru
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /signin-google?(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /signin-vkontakte?(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /signin-facebook?(.*)
            backend:
              serviceName: stockapi-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'usa-invest.ru'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
